--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ Thumbs.db
 
 # Environment files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE or editor settings
 .vscode/
